enhanced filtering and added legends

--- a/src/app/Pages/addassessment/addassessment.component.html
+++ b/src/app/Pages/addassessment/addassessment.component.html
@@ -491,6 +491,16 @@
             </select>
           </div>
         </div>
+        <div class="row row-cols-lg-12 justify-content-start ms-1">
+          <div class="col-11 mt-2">
+            <label class="label ms-1" for="scomment">Comments</label>
+            <textarea
+              class="form-control"
+              id="scomment"
+              formControlName="comment"
+            ></textarea>
+          </div>
+        </div>
         <hr />
       </div>
       <div
