--- a/src/app/Pages/alldrivers/alldrivers.component.html
+++ b/src/app/Pages/alldrivers/alldrivers.component.html
@@ -152,6 +152,32 @@
       >
         <i class="fa-solid fa-circle-plus me-1"></i>Add new driver
       </button>
+      <div class="legend-container">
+        Legends: &#91;
+        <div class="legend-item fs-7">
+          <span class="legend-box legend-blue"></span>
+          <span>Selected Row</span>
+        </div>
+        <div class="legend-item fs-7">
+          <span class="legend-box legend-red"></span>
+          <span>License Expired</span>
+        </div>
+        <div class="legend-item fs-7">
+          <span class="legend-box legend-yellow"></span>
+          <span>Permit Expired</span>
+        </div>
+        <div class="legend-item fs-7">
+          <button
+            type="button"
+            class="btn btn-outline-success btn-sm"
+            style="font-size: 10px"
+          >
+            <i class="fa-solid fa-circle-info"></i>
+          </button>
+          <span>Driver Detail Page</span>
+        </div>
+        &#93;
+      </div>
     </div>
   </div>
 
