--- a/src/app/Pages/assessmentdetail/assessmentdetail.component.html
+++ b/src/app/Pages/assessmentdetail/assessmentdetail.component.html
@@ -294,7 +294,7 @@
               <input
                 type="text"
                 class="form-control form-control-sm"
-                id="inlineFormInputGroupSessionDate"
+                id="inlineFormInputGroupWeather"
                 formControlName="weather"
                 placeholder="Sunny"
               />
@@ -414,6 +414,16 @@
               <option [value]="item.id">{{ item.name }}</option>
               }
             </select>
+          </div>
+        </div>
+        <div class="row row-cols-lg-12 justify-content-start ms-1">
+          <div class="col-11 mt-2">
+            <label class="label ms-1" for="scomment">Comments</label>
+            <textarea
+              class="form-control form-control-sm"
+              id="scomment"
+              formControlName="comment"
+            ></textarea>
           </div>
         </div>
         <hr />
