--- a/src/app/Components/action-cell-renderer/action-cell-renderer.component.html
+++ b/src/app/Components/action-cell-renderer/action-cell-renderer.component.html
@@ -5,14 +5,14 @@
     [routerLink]="['/alldrivers/' + params.data.id]"
   >
     <i class="fa-solid fa-circle-info"></i>
-    <div *ngIf="params.data.ddccount > 0">
-      <span
-        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-info"
-      >
-        {{ params.data.ddccount }}
-        <span class="visually-hidden">unread messages</span>
-      </span>
-    </div>
+    @if(params.data.ddccount>0){
+    <span
+      class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-info"
+    >
+      {{ params.data.ddccount }}
+      <span class="visually-hidden">unread messages</span>
+    </span>
+    }
   </button>
   <button class="btn btn-sm btn-outline-danger mt-2" (click)="onDeleteUser()">
     <i class="fa-solid fa-trash-can"></i>
