--- a/src/app/Pages/allassessments/allassessments.component.css
+++ b/src/app/Pages/allassessments/allassessments.component.css
@@ -4,3 +4,26 @@
 .my-inputextend {
   width: 130px; /* Adjust the width as needed */
 }
+.ag-theme-quartz {
+  --ag-header-background-color: #fff3cd;
+  --ag-font-size: 13px; /* Set your desired font size */
+  --ag-borders: solid 1px; /* Enable borders */
+  --ag-border-color: #ccc; /* Set border color */
+  --ag-row-border-style: solid;
+  --ag-row-border-width: 1px;
+  --ag-row-border-color: #ccc;
+  --ag-cell-horizontal-border: solid 1px #ccc;
+}
+
+.ag-theme-quartz-dark {
+  --ag-font-size: 13px; /* Set your desired font size */
+  --ag-borders: solid 1px; /* Enable borders */
+  --ag-border-color: #ccc; /* Set border color */
+  --ag-row-border-style: solid;
+  --ag-row-border-width: 1px;
+  --ag-row-border-color: #ccc;
+  --ag-cell-horizontal-border: solid 1px #ccc;
+}
+.bold-header {
+  font-weight: bold;
+}
