--- a/src/app/Pages/footer/footer.component.html
+++ b/src/app/Pages/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-primary text-white text-center footer">
+<div class="container-fluid bg-primary text-white text-center footer no-print">
   <div id="copyright">
     <span
       >Consult & Train is Pakistan’s most experienced driver training
