--- a/src/app/Pages/layout/layout.component.html
+++ b/src/app/Pages/layout/layout.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg bg-gradient1 p-1">
-  <div class="container-fluid">
+  <div class="container-fluid no-print">
     <div class="d-flex align-items-center">
       @if (userRoles[0]==='guest') {
       <a class="navbar-brand m-0 p-0" routerLink="/gdashboard">
